<resources>
    <string name="app_name">App Test</string>
    <string name="user_name">Dzikri Rabbani</string>
    <string name="nim">1237050027</string>
    <string name="button_label_toast">Toast</string>
    <string name="count_initial_value">0</string>
    <string name="button_label_count">Count</string>
    <string name="toast_message">Hello Toast !</string>
    <string name="button_label_pindah">Switch Page</string>
    <string name="text_header">Halaman ke-2</string>
    <string name="button_label_browser">Browse Page</string>
</resources>